--- a/projects/peso/peso_doc.qmd
+++ b/projects/peso/peso_doc.qmd
@@ -1,5 +1,5 @@
 ---
-title: "The Mexican Peso: History & Opportunities"
+title: "The Peso In Crisis"
 subtitle: "Three Periods of Setbacks Unique to Mexico"
 date: "Nov 22, 2024"
 author: "Kevin Valdivia"
